# rhos_cobot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  concat_frames.sh  process_0428_videos.sh
config/: deploy.json  episode4_plate_wash_sandwich.task_spec.json  server_state.example.json  servers.example.toml  task_prompts.json  vllm_server_state.json
docs/: collect.md  deploy.md  dual_system_deploy.md  post_collect.md  replay.md
examples/piper_real/: .gitignore  README.md  UV_MIGRATION.md  base_safety.py  convert_piper_data_to_lerobot.py  convert_piper_data_to_lerobot_multitask-multithread.py  convert_piper_data_to_lerobot_multitask-multithread2.py  convert_piper_data_to_lerobot_multitask.py  env.py  env_inv.py  hybrid_orchestrator.py  llm_planner.py  llm_utils.py  logger.py  main.py  main_inv.py  main_visualize.py  mock_policy_server.py  navigation_tool.py  planner_config.py  progress_plot.py  pyproject.toml  qt_env.py  real_env.py  replay_env.py  replay_manipulation_planner.py  replay_navigation_executor.py  replay_planner.py  replay_task_memory.py  replay_visualizer.py  requirements.in  requirements.txt  robot_utils.py  server_checks.py  task_decomposer.py  visual_completion_detector.py
rhos_cobot/: data_collection.py  openpi_remote_policy.py  pillow_overlay.py  post_process.py
scripts/: _read_toml.py  _resolve_task_prompt.py  _server_env.sh  check_servers.sh  extract_replay_camera_video.py  init.sh  init_headless.sh  qz_pi0_server.py  qz_server_demo.py  qz_vllm_server.py  run_piper_deploy.sh  run_piper_deploy_no_task_memory.sh  start_pi0_server.sh  (+13 more)
(+78 files in other folders)
